# monkeygpt

./: .gitignore  README.md  api_key_template.yaml  pyproject.toml  run_bot_server.py
resources/data/: insults.csv  insults_mi3_fail.csv  insults_mi3_guybrush.csv  insults_mi3_renee.csv  insults_swordmaster.csv  pirate_types_generated.txt  pirate_types_original.txt
resources/prompts/: game_overview.txt  generate_pirate_types.txt
src/: answers.py  assault.py  bot.py  config.yaml  game.py  insult.py  mistral_text_generator.py  players.py  prompts.py  utils.py
